--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,5 +13,11 @@ pipeline {
               echo 'Hello world'
             }
         }
+
+        stage('Foo') {
+              steps {
+                echo 'Hello world'
+              }
+        }
     }
 }
