--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,7 +14,7 @@ pipeline {
             }
         }
 
-        stage('Foo') {
+        stage('Bar') {
               steps {
                 echo 'Hello world'
               }
