--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,5 +19,11 @@ pipeline {
                 echo 'Hello world'
               }
         }
+
+        post {
+              always {
+                echo 'I will always say Hello again!'
+              }
+        }
     }
 }
